@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.31 2004/03/11 20:18:38 freddy77 Exp $
+# $Id: Makefile.am,v 1.32 2004/03/21 08:24:43 freddy77 Exp $
 TESTS		=	\
 			t0001 t0002 t0003 t0004 connect print date \
 			norowset funccall lang_error tables \
@@ -39,5 +39,5 @@ data_SOURCES	= data.c common.c common.h
 
 LIBS		=	$(ODBCLIB) $(ODBCNODMLIB) @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include $(ODBC_INC)
-DISTCLEANFILES	=	myodbc.ini odbcinst.ini odbc.ini
+DISTCLEANFILES	=	odbc.ini odbcinst.ini
 
